--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,3 +3,4 @@ description: Experiemental Programming Language
 version: 0.1.0
 dependencies:
   petitparser: ">=1.3.7 <2.0.0"
+  path: ">=1.3.3 <2.0.0"
