--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: badger
 description: Experiemental Programming Language
 version: 0.1.0
 dependencies:
-  args: ">=0.12.2+6 <0.13.0"
+  args: ">=0.13.0 <0.14.0"
   petitparser: ">=1.3.7 <2.0.0"
   path: ">=1.3.3 <2.0.0"
 executables:
