--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ dependencies:
   args: ">=0.13.0 <0.14.0"
   petitparser: ">=1.3.7 <2.0.0"
   path: ">=1.3.3 <2.0.0"
+  json_diff: ">=0.1.1 <0.2.0"
   http_server: ">=0.9.5+1 <0.10.0"
 executables:
   badger: "badger"
