--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: badger
-description: Experiemental Programming Language
+description: Experimental Programming Language
 version: 0.1.0
 dependencies:
   args: ">=0.13.0 <0.14.0"
+  crypto: ">=0.9.0 <0.10.0"
   petitparser: ">=1.3.7 <2.0.0"
   path: ">=1.3.3 <2.0.0"
   json_diff: ">=0.1.1 <0.2.0"
