--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,7 @@ name: badger
 description: Experimental Programming Language
 version: 0.1.0
 dependencies:
-  analyzer:
-    git:
-      url: https://github.com/dart-lang/ddc_analyzer.git
-      ref: 901ecfffe7c29db4ac4db2f8ac90ea790b995895
+  analyzer: ">=0.24.0 <0.25.0"
   args: ">=0.12.0 <0.14.0"
   crypto: ">=0.9.0 <0.10.0"
   petitparser: ">=1.3.7 <2.0.0"
