--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,5 +9,6 @@ dependencies:
   path: ">=1.3.3 <2.0.0"
   json_diff: ">=0.1.1 <0.2.0"
   http_server: ">=0.9.5+1 <0.10.0"
+  parsejs: ">=1.0.3 <2.0.0"
 executables:
   badger: "badger"
