--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: badger
 description: Experimental Programming Language
 version: 0.1.0
 dependencies:
-  analyzer: ">=0.24.0 <0.25.0"
+  analyzer: ">=0.24.0 <0.27.0"
   args: ">=0.12.0 <0.14.0"
   crypto: ">=0.9.0 <0.10.0"
   petitparser: ">=1.3.7 <2.0.0"
@@ -10,5 +10,6 @@ dependencies:
   json_diff: ">=0.1.1 <0.2.0"
   http_server: ">=0.9.5+1 <0.10.0"
   parsejs: ">=1.0.3 <2.0.0"
+  dart_style: "^0.2.0"
 executables:
   badger: "badger"
