--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,15 @@ name: badger
 description: Experimental Programming Language
 version: 0.2.0
 dependencies:
-  analyzer: ">=0.27.0 <0.30.0"
-  args: ">=0.12.0 <0.14.0"
-  crypto: ">=0.9.0 <0.10.0"
-  petitparser: ">=1.5.0 <2.0.0"
-  path: ">=1.3.3 <2.0.0"
-  json_diff: ">=0.1.1 <0.2.0"
-  http_server: ">=0.9.5+1 <0.10.0"
+  analyzer: "^0.27.4"
+  args: "^0.13.5"
+  crypto: "^2.0.1"
+  petitparser: "^1.5.3"
+  path: "^1.3.9"
+  json_diff: "^0.1.2"
+  http_server: "^0.9.6"
   parsejs: ">=1.0.3 <2.0.0"
   dart_style: "^0.2.0"
+  stack_trace: "^1.6.6"
 executables:
   badger: "badger"
